#1363: Show dropdown for create field report on mobile, fix styling position

--- a/src/styles/global/_page-prime-nav.scss
+++ b/src/styles/global/_page-prime-nav.scss
@@ -284,6 +284,7 @@
   padding-inline-start: ($global-spacing * 2);
   padding-inline-end: ($global-spacing * 2);
   position: relative;
+  top: ($global-spacing * 1.3);
 
   .drop__menu {
     padding: 0;
@@ -302,5 +303,9 @@
     &::after {
       color: #fff;
     }
+  }
+
+  @include media(medium-up) {
+    top: auto;
   }
 }
